# liquidwar5-ai-training

./: .dockerignore  .gitignore  README.md  analyze.py  battle_decisions_20260411_230137.csv  battle_decisions_20260411_230143.csv  battle_decisions_20260411_230144.csv  battle_decisions_20260411_230150.csv  battle_decisions_20260411_230151.csv  battle_decisions_20260411_230156.csv  battle_decisions_20260411_230202.csv  battle_decisions_20260411_230203.csv  battle_decisions_20260411_230209.csv  battle_decisions_20260411_230210.csv  battle_decisions_20260411_230217.csv  battle_decisions_20260411_230223.csv  battle_decisions_20260411_230224.csv  battle_decisions_20260411_230230.csv  battle_decisions_20260411_230236.csv  battle_decisions_20260411_230243.csv  battle_decisions_20260411_230250.csv  battle_decisions_20260411_230257.csv  battle_decisions_20260411_230303.csv  battle_decisions_20260411_230309.csv  battle_decisions_20260411_230310.csv  battle_decisions_20260411_230315.csv  battle_decisions_20260411_230316.csv  battle_decisions_20260411_230321.csv  battle_decisions_20260411_230323.csv  battle_decisions_20260411_230329.csv  battle_decisions_20260411_230330.csv  battle_state_20260411_230137.csv  battle_state_20260411_230143.csv  battle_state_20260411_230144.csv  battle_state_20260411_230150.csv  battle_state_20260411_230151.csv  battle_state_20260411_230156.csv  battle_state_20260411_230202.csv  battle_state_20260411_230203.csv  battle_state_20260411_230209.csv  (+30 more)
argocd-apps/: README.md  liquidwar-coordinator.yaml  liquidwar-cpu-worker.yaml  liquidwar-gpu-trainer.yaml  (+1 more)
(+74 files in other folders)
