[project]
name = "liquidwar5-ai-training"
version = "0.1.0"
description = "Parameter evolution and neural network training for liquidwar5-ai"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka[avro]>=2.3.0",
    "fastavro>=1.9.0",
    "torch>=2.11.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8.0"]
gpu = ["torch>=2.0.0"]
all = ["matplotlib>=3.8.0", "torch>=2.0.0"]
